Fixed Weird spacing on Areas, WIP on parsing github data

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,6 @@
 
 .navSection{
   background-color: #055C9D;
-  width: 15%;
+  width: 17%;
 }
+
